--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "xpostinstall": "node ./build/install-pdf-viewer",
     "dev": "webpack --config build/webpack.dev.config.js",
-    "build": "gulp --cwd . --gulpfile build/gulp-build.js",
+    "build": "./node_modules/.bin/gulp --cwd . --gulpfile build/gulp-build.js",
     "test": "karma start build/karma.config.js"
   },
   "dependencies": {
